Modify stale workflow messages

--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
       - uses: actions/stale@v10
         with:
-          stale-issue-message: "Hi, this issue has been marked as stale. Please check that your issue is still relevant and add a comment."
-          close-issue-message: "Hi, this issue has been closed due to being stale. Please reopen if your issue is still relevant."
+          stale-issue-message: "Hi, this issue has been marked as stale due to inactivity. Please check that your issue is still relevant and add a comment."
+          close-issue-message: "Hi, this issue has been closed due to inactivity. Please reopen if your issue is still relevant."
